--- a/app/package.json
+++ b/app/package.json
@@ -12,18 +12,22 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "@shopify/react-native-skia": "^1.12.4",
     "expo": "^53.0.5",
     "expo-blur": "^14.1.4",
     "expo-font": "~13.3.1",
+    "expo-linear-gradient": "^14.1.4",
     "expo-router": "^5.0.4",
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.507.0",
     "nativewind": "latest",
+    "phosphor-react-native": "^2.3.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-graph": "^1.1.0",
+    "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2"
